# Ecdar-GUI-Native

./: .gitmodules  Cargo.toml  README.md  tauri.conf.json
.github/workflows/: build_artifacts.yml  check_format.yml  test.yml  test_format.yaml
ecdar-gui-macros/: Cargo.toml
ecdar-gui-macros/src/: lib.rs
src/: build.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
